Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3245

Runtime filter DCHECK exec_complete_barrier_.get() != __null Filters received before fragments started!

    XMLWordPrintableJSON

Details

    Description

      Simple query on debug build using single node cluster hitting DCHECK

       coordinator.cc:1959] Check failed: exec_complete_barrier_.get() != __null Filters received before fragments started!
      

      Repro

      set ENABLE_BATCHED_JOIN=0;
      set RUNTIME_FILTER_MODE=2;
      select count(*) from customer, orders where c_custkey = o_custkey and  c_nationkey=15 and o_custkey < 10000;
      

      Attachments

        Activity

          People

            henryr Henry Robinson
            mmokhtar Mostafa Mokhtar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: