IMPALA-3245 / IMPALA-3305: Fix crash with global filters when NUM_NODES=1

Filter locality was not correctly set when NUM_NODES=1 (and therefore no
distributed plan was created). The default locality should be 'local'.

This patch also fixes a bug where the initial filter routing table
wasn't printed when NUM_NODES=1.

Change-Id: I7b9a6bcc64ca6ec5fd51d63815cea25de866ef93
Reviewed-on: http://gerrit.cloudera.org:8080/2721
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Internal Jenkins